<resources>
    <string name="app_name">Playopolis</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="place_holder">place holder</string>
    <string name="playopolis_logo">playopolis logo</string>
    <string name="avatar">Avatar</string>
    <string name="genres">Genres</string>
    <string name="choose_file">Choose file</string>
    <string name="nextpage">continue</string>
    <string name="save">save</string>
    <string name="games_you_ve_played">Games you\'ve played</string>
    <string name="set_up_your_profile">Set up                   your profile</string>
    <string name="enter_password">Enter password</string>
    <string name="enter_e_mail">Enter E-Mail</string>
    <string name="repeat_password">Repeat password</string>
    <string name="enter_username">Enter username</string>
    <string name="username">Username</string>
    <string name="describe_yourself">Describe yourself!</string>
    <string name="profile_username">Username</string>
    <string name="logout">Logout</string>
    <string name="picture">Picture</string>
</resources>