<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/round_cardView2"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:elevation="12dp"
        android:innerRadius="0dp"
        android:shape="ring"
        android:thicknessRatio="1.9"
        app:cardCornerRadius="40dp"
        app:layout_constraintEnd_toEndOf="@+id/avatar_textView"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/avatar_textView"
        app:layout_constraintTop_toBottomOf="@+id/avatar_textView"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/profilpicture_imageView"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:contentDescription="@string/place_holder"
            android:scaleType="centerCrop"
            tools:layout_editor_absoluteX="112dp"
            tools:layout_editor_absoluteY="284dp"
            tools:srcCompat="@tools:sample/avatars" />
    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/avatar_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/avatar"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.123"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/set_your_profile"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/genres_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/genres"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/avatar_textView"
        app:layout_constraintStart_toStartOf="@+id/avatar_textView"
        app:layout_constraintTop_toBottomOf="@+id/round_cardView2" />

    <Button
        android:id="@+id/choosefile_button"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginEnd="64dp"
        android:text="@string/choose_file"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/round_cardView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/round_cardView2" />

    <Button
        android:id="@+id/continue_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nextpage"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextText2"
        app:layout_constraintVertical_bias="0.352" />

    <TextView
        android:id="@+id/playedGames_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/games_you_ve_played"
        app:layout_constraintEnd_toEndOf="@+id/genres_textView"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/genres_textView"
        tools:layout_editor_absoluteY="380dp" />

    <EditText
        android:id="@+id/editTextText2"
        android:layout_width="330dp"
        android:layout_height="100dp"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:lines="5"
        android:scrollbars="vertical"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/textView5"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Description"
        app:layout_constraintEnd_toEndOf="@+id/playedGames_textView"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/playedGames_textView"
        tools:layout_editor_absoluteY="487dp" />



</androidx.constraintlayout.widget.ConstraintLayout>